organizando código para nomes de variaveis e classes para português